links and hovers added

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
       <div class="site-header-inner">
         <div class="site-header-top">
           <!-- logo -->
-          <a href="" class="site-header-logo">
+          <a href="#" class="site-header-logo">
             <h1 class="site-header-name">The Fake News Site</h1>
             <img
               src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZnVubnklMjBpY29ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
@@ -49,6 +49,7 @@
               <h3 class="site-big-news-headline">
                 <a
                   href="https://media3.giphy.com/media/v2uiuJw5vne2Q/200w.webp?cid=ecf05e476rcf0gc0f87nf4w6r6qffsbdumjf623jpmrluqqk&rid=200w.webp&ct=g"
+                  target="_blank"
                   class="site-big-news-headline-link"
                 >
                   <span class="site-big-news-headline-text">
@@ -76,7 +77,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/search/trump" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     What's a party without this Trump pinata?
                   </span>
@@ -101,7 +104,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/search/diet" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     D.I.E.T stands for "Did I Eat That? (Really?)"
                   </span>
@@ -126,7 +131,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/search/bootcamp" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     Speak "CAT" in 24 weeks. Join CATMEOW Bootcamp
                   </span>
@@ -151,7 +158,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/cbe5PQWW4vol2" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     Lockdown Diaries: Does this monkey start to look like you?
                     Time for a trim.
@@ -177,7 +186,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/liljon-lil-jon-iOMSfTen1pZUPTx2QF" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     This hand signal will cause you broken bones. Here's why
                   </span>
@@ -202,7 +213,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/americas-next-top-model-tyra-banks-AdeRKmsrVVD44" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     Smize Lemur: Vogue's newest top model
                   </span>
@@ -227,7 +240,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/trending-gifs-trendingifs-10KTdhr5Zzq6uA" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     80's photoshoot style making a comeback
                   </span>
@@ -252,7 +267,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/post-vision-superchief-pastelae-26BRNKLUezD1NpsOc" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     Stop aliens from kidnapping your pets! Here's how
                   </span>
@@ -277,7 +294,9 @@
           <div class="site-news-body">
             <div class="site-news-body-main">
               <h3 class="site-news-headline">
-                <a href="" class="site-news-headline-link">
+                <a href="https://giphy.com/gifs/kitten-friend-xpost-eOFQQe9Yzb1qo" 
+                target="_blank"
+                class="site-news-headline-link">
                   <span class="site-news-headline-text">
                     No tissue paper? No problem!
                   </span>
@@ -291,14 +310,17 @@
 
     <footer>
       <div class="footer-wrap">
-        <a href="" class="footer-site-name-link">The Fake News Site</a>
+        <a href="#" class="footer-site-name-link">The Fake News Site</a>
         <div class="footer-social-media-icon">
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-twitter-square"></i>
-          <i class="fab fa-instagram-square"></i>
+          <a href="https://sv-se.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <a href="https://twitter.com/?lang=sv" target="_blank"><i class="fab fa-twitter-square"></i></a>
+          <a href="https://www.instagram.com/"><i class="fab fa-instagram-square"></i></a>
       </div>
     </footer>
     <hr class="thick" />
-    <p class="project-credentials">Project news site by Lousanne Lundström ❤</p>
+    <div class="project-credentials">
+      <p>❤ Project news site by Lousanne Lundström ❤</p>
+    <a href="#top">↑ Back to Top ↑</a>
+    </div>
   </body>
 </html>
