--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="header">
-      <img class="logo-image" src="binoklis-logo.png" alt="Logo of the company- binoculars" />
+      <img class="logo-image" src="./binoklis-logo.png" alt="Logo of the company- binoculars" />
       <h1 class="title-text">binoklis</h1>
       <nav>
         <a class="link-plays" href="#">plays</a>
