First big change and first commit

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nothing but News</title>
+</head>
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="logo" src="./news.svg" alt="logo">
+        <!-- <h1>Nothing but News</h1> -->
+        <nav class="nav">
+            <a class="nav-item" href="path/to/subpage">Main</a>
+            <a class="nav-item" href="path/to/subpage">Second</a>
+            <a class="nav-item" href="path/to/subpage">About</a>
+            <a class="nav-item" href="path/to/subpage">Submit</a>
+        </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<section class="main-news">
+    <div class="first-row">
+        <div class="cardbig">
+                <img src="https://picsum.photos/250" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, laboriosam.
+        </div>
+            <div class="cardbig">    
+                <img src="https://picsum.photos/250" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa, laboriosam.</p>
+            </div>
+    </div>
+</section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<section class="second-news">
+    <div class="second-row">
+        <article class="card"><img src="https://picsum.photos/100" alt="random news">
+            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+        <article class="card"><img src="https://picsum.photos/100" alt="random news">
+            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+        <article class="card"><img src="https://picsum.photos/100" alt="random news">
+            <h4>Lorem ipsum dolor sit,deleniti!</h4>READ MORE</article>
+        <article class="card"><img src="https://picsum.photos/100" alt="random news">
+            <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+            <article class="card"><img src="https://picsum.photos/100" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+            <article class="card"><img src="https://picsum.photos/100" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+            <article class="card"><img src="https://picsum.photos/100" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+            <article class="card"><img src="https://picsum.photos/100" alt="random news">
+                <h3>Lorem ipsum dolor sit,deleniti!</h3>READ MORE</article>
+    </div>
+  </section>
+
+<footer>Responsive made by Jakob Lindstrom</footer>    
+</body>
 </html>
