--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,101 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla&display=swap"
+      rel="stylesheet"
+    />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
+      <div class="header-wrapper">
+      <img class="logo" src="./logo_transparent.png" alt="Inte Hon Art Logo" />
+      <nav class="navigation">
+        <a href="#">Music</a>
+        <p class="navigation">|</p>
+        <a href="#">Art</a>
+        <p class="navigation">|</p>
+        <a href="#">Photography</a>
+        <p class="navigation">|</p>
+        <a class="search-link" href="#">Search</a>
+      </nav>
+    </div>
       <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+        <section class="big-news-wrapper">
+        <div class="big-news-container">
+        <img
+          class="big-news-img"
+          src="elliott-high-res-2.jpg"
+          alt="Picture by Angelica Elliott"
+        />
 
-    <section class="">
-      <!-- The other news  -->
+        <!-- <section class="big-news-text"> -->
+        <div class="big-news-text">
+          <span class="preamble">The Swedish photographer’s first monograph charts an intimate and empowering journey, searching for stability in the everyday as she comes to terms with a troubled past</span>
+          <p>Angelica Elliott arrived in Rågsved, a southern suburb of Stockholm,
+          seven years ago. Almost immediately, she started taking pictures.
+          Initially, she was shooting without any clear direction and with no
+          real experience of the medium, but “wanted new pictures in my head”,
+          she explains. “I was dealing with post-traumatic stress and I wanted
+          to know myself. Photography helped me and developed into my therapy.
+          It felt important to show my place, and my place within my place.” </p>
+          <p>As she became acquainted with the area, Elliott began to assist JH
+          Engström and Margot Wallard with their workshop project, Atelier
+          Smedsby, a non-academic one-year photography programme in Paris. “We
+          had a friend in common who introduced us at a bar in Stockholm, in
+          2013,” she explains. “I remember I was upset at not being accepted to
+          a photography school and my friend thought this could open some doors
+          for me.” Engström and Wallard mentored Elliott. She gained invaluable
+          experience from the photographers, curators, publishers and writers
+          they associated with on a professional and social level, including
+          Anders Petersen, Nan Goldin, Jim Goldberg, Gilou Le Gruiec, Todd Hido
+          and Christian Caujolle, to name but a few. Engström in particular took
+          a keen interest in Elliott’s work as it began to take shape. “I have
+          followed Angelica and her project since she started it,” he says. “We
+          have talked and shared a lot over those years. Almost never
+          specifically about Rågsved, but more about longing, love, loss and
+          death. In all our conversations, I have had a feeling of total honesty
+          from her side. This is unusual and beautiful. What we have talked
+          about and shared could have taken place anywhere. For Angelica it took
+          place in Rågsved. In her universe.”</p>
+        <!-- </section> -->
+        <div class="big-news">
+          <div>
+          <img class="big-news-small-img" src="bicycle.jpg" alt="Photo of a bicycle on a balcony" />
+          <p>dkfughdkfjghkjdf</p>
+        </div>
+        
+        <img class="big-news-small-img" src="dora.jpg" alt="Upclose picture of a woman" />
+          <img class="big-news-small-img" src="elliott-polaroid.jpg" alt="A polroid with text" />
+        </div>
+      </div>
+      </div>
+    
     </section>
+      <!-- The big news content -->
+  
+     <section class="small-news-wrapper"> 
+   <!-- <div class="big-news-container"> -->
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+<div> <img class="small-news-img" src="ulrika-spacek.jpg" alt="Ulrika Spacek" /><h4>headline</h4><p>text</p></div>
+
+      <p class="small-news-text"></p>
+    <!-- </div> -->
+</section>
+          <!-- The other news  -->
+      <div class="footer"></div>
+    </div>
   </body>
 </html>
