--- a/code/index.html
+++ b/code/index.html
@@ -38,17 +38,17 @@
             <section class="top-bar right">     <!--made a link wrapping around each social media icon-->
                 <a href="https://www.facebook.com" target="blank"> <!-- target ="blank" -> new tab-->                 
                     <div class="social-media-icon">
-                        <img src="./facebook.png" alt="facebook icon" width="30" height=30>
+                        <img src="./facebook.png" alt="facebook icon" width="20" height=20>
                     </div>      
                 </a>
                 <a href="https://www.instagram.com" target="blank">
                     <div class="social-media-icon">
-                        <img src="./instagram.png" alt="instagram icon" width="30" height=30>
+                        <img src="./instagram.png" alt="instagram icon" width="20" height=20>
                     </div>
                 </a>
                 <a href="https://www.twitter.com" target="blank"> 
                     <div class="social-media-icon">
-                        <img src="./twitter.png" alt="twitter icon" width="30" height=30>
+                        <img src="./twitter.png" alt="twitter icon" width="20" height=20>
                     </div>
                 </a>
             </section>
@@ -93,7 +93,7 @@
                 <img src="./corona.jpg" alt="image of coronavirus">
             </div>
             <div class="big-news" id="health"> <!--put an id so we can target it from navbar-->
-                <h3>Health</h3> 
+                <h3><span class="target-highlight">Health</span></h3> <!--class "target-highlight, it's going to only highlight the word "Health"-->
                 <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
                 <h3>As Trump has predicted...</h3>
             </div>
@@ -111,7 +111,7 @@
             </div>
             <div class="other-news" id="tech">
                 <img src="./robot.jpg" alt="image of robots on the moon">
-                <h3>Tech</h3>
+                <h3><span class="target-highlight">Tech</span></h3>
                 <h2>Tesla's building a robot</h2>
                 <h3>Elon Musk...</h3>
             </div>
@@ -123,7 +123,7 @@
             </div>
             <div class="other-news" id="business">
                 <img src="./cryptocurrency.jpg" alt="image of cryptocurrency">
-                <h3>Business</h3>
+                <h3><span class="target-highlight">Business</span></h3>
                 <h2>The future of Cryptocurrency</h2>
                 <h3>The Cryptocurrency is taking off around the world. Predictions...</h3>
             </div>
@@ -135,7 +135,7 @@
             </div>
             <div class="other-news" id="sports">
                 <img src="./tokyo.jpg" alt="image of the word Tokyo">
-                <h3>Sports</h3>
+                <h3><span class="target-highlight">Sports</span></h3>
                 <h2>Olympics Games Tokyo 2020: Best moments</h2>
                 <h3>See the best moments of Olympics Games 2020...</h3>
             </div>
@@ -154,7 +154,7 @@
                 <p>123 45 City</p>
                 <p>newsmagazine.com</p>
                 <p>E-mail: support@newsmagazine.com</p>
-                <p>Phone: 23 456 789</p>
+                <p>Phone: 123 456 789</p>
             </div>
             <div class="copyright"> 
                 <p>&#169 News Magazine 2021</p>         <!--&#169 is the copyright symbol-->
@@ -164,6 +164,5 @@
                 </a>
             </div> 
         </footer>
-
     </body>
 </html>
