footer and nav-bar edited

--- a/code/index.html
+++ b/code/index.html
@@ -40,19 +40,16 @@
   <section class="big-news">
     <!-- The big news content -->
 
-    <img class="big-news-image" src="../images/zebbache.jpg" alt="Zebbache">
+    <img class="big-news-image" src="../images/fran.jpg" alt="Fran">
     <h2 class="big-news-text">This week a redesign of the Lloyd's building by Richard Rogers was announced!
       <br> This week on ARCHMAG, insurance company Lloyd's of London revealed it would overhaul the iconic Underwriting
       Room at the heart of its high-tech Lloyd's building in London designed by Richard Rogers.
-      <a href="#"> Read more...</a>
       <br>
-      <a href="#">Save the article<i style="font-size:24px" class="fa">&#xf0c7;</i> </a>
+      <a href="#"><i>Read more>> </i></a>
     </h2>
   </section>
 <hr>
 
-  <!-- Top Projects Text / Editor´s Pick... -->
-  
   <a class="top-news-text" href="#">LATEST NEWS</a>
 
   <section class="news-cards">
@@ -125,12 +122,7 @@
 
 
   <footer>
-    <p class="footer-info">Pinar Demirel Etli`s news-site project</p>
-
-    <a href="#" class="fa fa-google"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-github"></a>
-
+    <p class="footer-info">This project was made by <b>Pınar Demirel Etli</b> as a student project in the <a href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
     <p>© Copyright 2021</p>
   </footer>
 
